--- a/app/src/main/res/layout/travel_tools.xml
+++ b/app/src/main/res/layout/travel_tools.xml
@@ -33,6 +33,53 @@
             app:layout_constraintGuide_percent="0.5" />
 
         <androidx.cardview.widget.CardView
+            android:id="@+id/compass"
+            android:layout_width="@dimen/_110sdp"
+            android:layout_height="@dimen/_75sdp"
+            android:layout_marginStart="16dp"
+            android:layout_marginBottom="6dp"
+            app:cardCornerRadius="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/guideline10"
+            app:layout_constraintTop_toTopOf="@+id/weather"
+            app:layout_constraintVertical_bias="0.0">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <ImageView
+
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:padding="8dp"
+                    android:scaleType="centerInside"
+                    android:src="@drawable/home_compass_icon"
+                    app:layout_constraintBottom_toTopOf="@+id/textView_"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/textView_"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/poppins"
+                    android:gravity="center"
+                    android:text="Compass"
+
+                    android:textColor="@color/black_text_color"
+                    android:textSize="12sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
             android:id="@+id/weather"
             android:layout_width="@dimen/_110sdp"
             android:layout_height="@dimen/_75sdp"
@@ -58,7 +105,7 @@
                     android:layout_height="0dp"
                     android:padding="8dp"
                     android:scaleType="centerInside"
-                    android:src="@drawable/weather_icon"
+                    android:src="@drawable/speedmeter_icon"
                     app:layout_constraintBottom_toTopOf="@+id/textView8"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -70,7 +117,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="8dp"
                     android:gravity="center"
-                    android:text="Weather"
+                    android:text="Speedometer"
                     android:textColor="@color/black_text_color"
 
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -83,12 +130,14 @@
             android:id="@+id/qibla_compass"
             android:layout_width="@dimen/_110sdp"
             android:layout_height="@dimen/_75sdp"
-            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="8dp"
             app:cardCornerRadius="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/guideline10"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/guideline10"
-            app:layout_constraintTop_toTopOf="@+id/weather">
+            app:layout_constraintTop_toBottomOf="@+id/weather">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -173,8 +222,9 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
